Dummy_Package_for_scratch_org/main/default/objects/Compliance_Rule__c/Compliance_Rule__c.object-meta.xml
<CustomObject>
    <description>This object stores the compliance rule definition.</description>
    <label>Compliance Rule</label>
    <nameField>
        <label>Compliance Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Compliance Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>