Dummy_Package_for_scratch_org/main/default/objects/Compliance_Rule__c/fields/Action__c.field-meta.xml
<CustomField>
    <fullName>Action__c</fullName>
    <inlineHelpText>Action to be performed automatically by Copado</inlineHelpText>
    <label>Action</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Compliance_Action</valueSetName>
    </valueSet>
</CustomField>