Dummy_Package_for_scratch_org/main/default/objects/Compliance_Rule__c/fields/Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Error_Message__c</fullName>
    <inlineHelpText>The message that will be displayed when this rule is triggered.</inlineHelpText>
    <label>Error Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>