Dummy_Package_for_scratch_org/main/default/objects/Compliance_Rule__c/fields/Filter_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Filter_Criteria__c</fullName>
    <inlineHelpText>Criteria filter query</inlineHelpText>
    <label>Filter Criteria</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>