Dummy_Package_for_scratch_org/main/default/objects/Compliance_Rule__c/fields/Is_Valid__c.field-meta.xml
<CustomField>
    <fullName>Is_Valid__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Automatically updated by copado when saving managing criteria</inlineHelpText>
    <label>Is Valid</label>
    <type>Checkbox</type>
</CustomField>