Dummy_Package_for_scratch_org/main/default/objects/Compliance_Rule__c/fields/Last_Validation_Date_time__c.field-meta.xml
<CustomField>
    <fullName>Last_Validation_Date_time__c</fullName>
    <label>Last Validation Date/time</label>
    <type>DateTime</type>
</CustomField>