Dummy_Package_for_scratch_org/main/default/objects/Compliance_Rule__c/fields/Last_Validation_Status_Message__c.field-meta.xml
<CustomField>
    <fullName>Last_Validation_Status_Message__c</fullName>
    <label>Last Validation Status Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>