Dummy_Package_for_scratch_org/main/default/objects/Compliance_Rule__c/fields/Record_Count__c.field-meta.xml
<CustomField>
    <fullName>Record_Count__c</fullName>
    <inlineHelpText>Number of returned values to assert.</inlineHelpText>
    <label>Record Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>