Dummy_Package_for_scratch_org/main/default/objects/Compliance_Rule__c/fields/Severity__c.field-meta.xml
<CustomField>
    <fullName>Severity__c</fullName>
    <inlineHelpText>Field to report on the Lightning Platform, Copado Doesn&apos;t action over this field</inlineHelpText>
    <label>Severity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Compliance_Severity</valueSetName>
    </valueSet>
</CustomField>