Dummy_Package_for_scratch_org/main/default/objects/Compliance_Rule__c/recordTypes/Copado.recordType-meta.xml
<RecordType>
    <fullName>Copado</fullName>
    <active>true</active>
    <description>Use this record type to define scan rules run by Copado.</description>
    <label>Copado</label>
</RecordType>