Dummy_Package_for_scratch_org/main/default/objects/Compliance_Rule__c/recordTypes/Other.recordType-meta.xml
<RecordType>
    <fullName>Other</fullName>
    <active>true</active>
    <description>Use this record type to define scan rules for 3rd party systems.</description>
    <label>Other</label>
</RecordType>