Dummy_Package_for_scratch_org/main/default/objects/Compliance_Rule__c/validationRules/Required_Criteria_Fields.validationRule-meta.xml
<ValidationRule>
    <fullName>Required_Criteria_Fields</fullName>
    <active>false</active>
    <errorConditionFormula>OR(
ISPICKVAL(Matching_Criteria__c ,&quot;&quot;),
ISPICKVAL(Record_Count_Criteria__c,&quot;&quot;),
ISNULL(Record_Count__c),
ISBLANK(Record_Count__c))</errorConditionFormula>
    <errorMessage>Matching Criteria, Record Count and Record Count Criteria are required fields.</errorMessage>
</ValidationRule>