Dummy_Package_for_scratch_org/main/default/objects/Compliance_Rule__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Active__c</columns>
    <columns>Severity__c</columns>
    <columns>Action__c</columns>
    <columns>Risk_Details__c</columns>
    <columns>Error_Message__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>